--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "@vercel/postgres": "0.9.0",
-    "next": "14.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "resend": "3.4.0"
+  "@vercel/postgres": "0.9.0",
+  "next": "14.2.5",
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
+  "resend": "3.4.0",
+  "zod": "3.23.8"
+}
   },
   "devDependencies": {
     "autoprefixer": "10.4.19",
